# Mini-Clip

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  long.yaml
configs/model/: clip_resnet_distilbert.yaml
notebooks/: Load-dataset.ipynb
scripts/: collect_results.py  eval_run.py  plot_learning_curves.py  plot_metrics.py  plot_results.py  plotter.ipynb  sweep_manager.py
src/mini_clip/: eval.py  factory.py  registry.py  smoke_test.py  train.py
src/mini_clip.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mini_clip/data/: datamodule.py  datasets.py  transforms.py
src/mini_clip/losses/: clip_loss.py  metrics.py
src/mini_clip/models/: clip.py
src/mini_clip/models/components/: __init__.py  image_encoders.py  projection.py  text_encoders.py
src/mini_clip/utils/: config.py
